--- a/anime.html
+++ b/anime.html
@@ -41,7 +41,7 @@
 </span>  
 -->
 
-<!-- Alert -->
+
 <header class="header-alert">
 <div class="alert">
   <span class="closebtn" 
@@ -57,7 +57,7 @@
     <p>The best thing I ever discovered</p>
     <p id="p-s">- Bhairabnath Jamkatel</p>
   </div>
-</header>
+</header
 
 
 
@@ -114,7 +114,7 @@
     <div class="third-image image-container"></div>
     <div class="parallax">
       <p> </p>
-  
+   
     </div>
   </div>
   
