Fixed page to template

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,39 @@
     <title>Document</title>
 </head>
 <body>
+<!-- Alert -->
+<header class="header-alert">
+    <div class="alert">
+      <span class="closebtn" 
+      onclick="this.parentElement.style.display='none';">&times;</span> 
+      <div id="s-1">Please Enjoy this blog and make sure to give feedback. Thank you and Enjoy!
+    </div>
+      </div>
+    </header>
+    <!-- Dropdown menu -->
+      <div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger">
+          <div></div>
+        </div>
+        <div class="menu">
+          <div>
+            <div>
+              <ul>
+                <li><a  href="blog.html">Home</a></li>
+                <li><a href="autob.html">Auto Biogrophy</a></li>
+                <li><a href="whatido.html">What I do</a></li>
+                <li><a href="anime.html">Anime</a>
+                <li><a href="tech.html">Technology</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+<!-- Contact -->
+
     <div class="container">
         <div class="row">
                 <h1>contact us</h1>
