--- a/blog.html
+++ b/blog.html
@@ -1,50 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      Bhairanbnath's Blog
-      </title>
-      <link href="Blog/css/bstyle.css" rel="stylesheet" type="text/css"></link>
-      <script src="Javascript/dropdown.js"></script>
-      <script src="Javascript/blog.js"></script>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	
-   <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-31485994-5"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', 'UA-31485994-5');
-    </script>
-    </head> 
+<head>
+  <title>
+    Bhairanbnath's Blog
+  </title>
+  <link href="Blog/css/bstyle.css" rel="stylesheet" type="text/css">
+  </link>
+  <script src="Javascript/dropdown.js"></script>
+  <script src="Javascript/blog.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-31485994-5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-31485994-5');
+  </script>
+</head>
+
 <body>
   <!-- color: #506772 -->
-  
-<!-- Alert -->
 
-<div class="alert">
-  <span class="closebtn" 
-  onclick="this.parentElement.style.display='none';">&times;</span> 
-  <div id="s-1">Please Enjoy this blog and make sure to give feedback. Thank you and Enjoy!
-</div>
+  <!-- Alert -->
+
+  <div class="alert">
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    <div id="s-1">Please Enjoy this blog and make sure to give feedback. Thank you and Enjoy!
+    </div>
   </div>
 
-<!-- Welcome page Heading and background image -->  
-<header class="showcase">
-  <div class="container showcase-inner">
-    <h1>Welcome</h1>
-    <p>Welcome to a blog made from scratch by a 12 year old</p>
-    <p id="p-s">- Bhairabnath Jamkatel</p>
-  </div>
-</header>
+  <!-- Welcome page Heading and background image -->
+  <header class="showcase">
+    <div class="container showcase-inner">
+      <h1>Welcome</h1>
+      <p>Welcome to a blog made from scratch by a 12 year old</p>
+      <p id="p-s">- Bhairabnath Jamkatel</p>
+    </div>
+  </header>
 
 
 
-<!-- Dropdown menu -->
+  <!-- Dropdown menu -->
   <div class="menu-wrap">
     <input type="checkbox" class="toggler">
     <div class="hamburger">
@@ -54,7 +56,7 @@
       <div>
         <div>
           <ul>
-            <li><a  href="blog.html">Home</a></li>
+            <li><a href="blog.html">Home</a></li>
             <li><a href="autob.html">Auto Biogrophy</a></li>
             <li><a href="whatido.html">What I do</a></li>
             <li><a href="anime.html">Anime</a>
@@ -97,17 +99,18 @@
     <div class="third-image image-container"></div>
     <div class="parallax">
       <p> </p>
-  
+
     </div>
   </div>
-  
 
 
-<!-- News -->
 
-<div class="News-div">
-  <span id="News"></span>
-</div>
+  <!-- News -->
+
+  <div class="News-div">
+    <span id="News"></span>
+  </div>
 
 </body>
+
 </html>
