Changed DIR, added sub btn

--- a/public/contactform.html
+++ b/public/contactform.html
@@ -13,11 +13,11 @@
     <div class="form-contianer">
         <formclass="contact-form">
             <h2>CONTACT</h2>
-            <input type="text" id="name" placeholder="Full name">
-            <input type="email" id="email" placeholder="Email">
-            <input type="test" id="subject" placeholder="Subject">
-            <textarea id="message" placeholder="Message" cols="30" rows="10"></textarea>
-            </form>
+            <input type="text" id="name" placeholder="Full name"><br>
+            <input type="email" id="email" placeholder="Email"><br>
+            <input type="test" id="subject" placeholder="Subject"><br>
+            <textarea id="message" placeholder="Message" cols="30" rows="10"></textarea><br>
+            <input type="submit" class="submit" value="Send message" </form>
     </div>
 
 </body>
