Linked APP.JS, CONSOLE.LOG

--- a/public/contactform.html
+++ b/public/contactform.html
@@ -21,6 +21,7 @@
             <input type="submit" class="submit" value="Send message" </form>
     </div>
 
+    <script src="js/app.js"></script>
 </body>
 
 </html>
