--- a/public/contactform.html
+++ b/public/contactform.html
@@ -13,6 +13,7 @@
 
     <div class="form-contianer">
         <formclass="contact-form">
+            <hr class="hr-1">
             <h2>CONTACT</h2>
             <input type="text" id="name" placeholder="Full name"><br>
             <input type="email" id="email" placeholder="Email"><br>
