--- a/public/contactform.html
+++ b/public/contactform.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-
+    <a href="mailto:nepal.alex6@gmail.com">Send email</a>
     <div class="form-contianer">
-        <formclass="contact-form">
+        <form class="contact-form">
             <hr class="hr-1">
             <h2>CONTACT</h2>
             <input type="text" id="name" placeholder="Full name"><br>
             <input type="email" id="email" placeholder="Email"><br>
             <input type="test" id="subject" placeholder="Subject"><br>
             <textarea id="message" placeholder="Message" cols="30" rows="10"></textarea><br>
-            <input type="submit" class="submit" value="Send message" </form>
+            <!--<input type="submit" class="submit" value="Send message" </form> -->
     </div>
 
     <script src="js/app.js"></script>
