--- a/whatido.html
+++ b/whatido.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      Bhairanbnath's Blog
-      </title>
-      <link href="What I do/css/wid.css" rel="stylesheet" type="text/css"></link>
-      <script src="Javascript/dropdown.js"></script>
-      <script src="Javascript/blog.js"></script>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	
-   <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-31485994-5"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', 'UA-31485994-5');
-    </script>
-    </head> 
+<head>
+  <title>
+    Bhairanbnath's Blog
+  </title>
+  <link href="What I do/css/wid.css" rel="stylesheet" type="text/css">
+  </link>
+  <script src="Javascript/dropdown.js"></script>
+  <script src="Javascript/blog.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-31485994-5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-31485994-5');
+  </script>
+</head>
+
 <body>
   <!-- color: #506772 -->
-  
-<!-- Copyright -->
-<!--
+
+  <!-- Copyright -->
+  <!--
   <span>
   <span>
     <span>
@@ -41,25 +44,24 @@
 </span>  
 -->
 
-<!-- Alert -->
-<header class="header-alert">
-<div class="alert">
-  <span class="closebtn" 
-  onclick="this.parentElement.style.display='none';">&times;</span> 
-  <div id="s-1">Please Enjoy this blog and make sure to give feedback. Thank you and Enjoy!
-</div>
-  </div>
-</header>
-<!-- Welcome page Heading and background image -->  
-<header class="showcase">
-  <div class="container showcase-inner">
-    <h1>My Projects</h1>
-  </div>
-</header>
+  <!-- Alert -->
+  <header class="header-alert">
+    <div class="alert">
+      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+      <div id="s-1">Please Enjoy this blog and make sure to give feedback. Thank you and Enjoy!
+      </div>
+    </div>
+  </header>
+  <!-- Welcome page Heading and background image -->
+  <header class="showcase">
+    <div class="container showcase-inner">
+      <h1>My Projects</h1>
+    </div>
+  </header>
 
 
 
-<!-- Dropdown menu -->
+  <!-- Dropdown menu -->
   <div class="menu-wrap">
     <input type="checkbox" class="toggler">
     <div class="hamburger">
@@ -69,7 +71,7 @@
       <div>
         <div>
           <ul>
-            <li><a  href="blog.html">Home</a></li>
+            <li><a href="blog.html">Home</a></li>
             <li><a href="autob.html">Auto Biogrophy</a></li>
             <li><a href="whatido.html">What I do</a></li>
             <li><a href="anime.html">Anime</a>
@@ -112,16 +114,24 @@
     <div class="third-image image-container"></div>
     <div class="parallax">
       <p> </p>
-      <iframe width="560" height="315" src="http://localhost:5500/anime.html"></iframe>
     </div>
   </div>
-  
 
+  <!-- Coding Projects -->
+  <div class="Coding-Projects-CWHQ">
+    <div class="project-container">
+      <div class="project-0-1">
+        <a class="pj-21" id="project-1" href="blog.html"><img id="img-space"
+            src="https://cdn.discordapp.com/attachments/721813302350446734/831981012375830528/unknown.png"></a>
+      </div>
+    </div>
+  </div>
 
-<!-- News -->
+  <!-- News -->
 
-<div class="News-div">
-  <span id="News"></span>
-</div>
+  <div class="News-div">
+    <span id="News"></span>
+  </div>
 </body>
+
 </html>
